--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ h1 {
 
 /* Estilos do corpo */
 body {
-    background-color: #04015e;
+    background-color: #71A2F5;
     font-family: Arial, sans-serif;
     padding-top: 80px; /* Espaço para o título fixo */
     height: 100%; /* Garante que o corpo ocupe toda a altura */
@@ -42,6 +42,7 @@ body {
 /* Estilo para as tabelas */
 .tabela {
     text-align: right;
+    margin-top: 20px;
 }
 
 table {
@@ -88,12 +89,12 @@ a:hover {
 /* Estilo das imagens de perfil */
 .perfil {
     text-align: center;
-    margin-top: 20px;
+    margin-top: 0;
 }
 
 img {
-    width: 200px;
-    height: 200px;
+    width: 400px;
+    height: 400px;
     border-radius: 20%;
     border: 4px solid #616df9;
     display: flex;
@@ -112,7 +113,7 @@ img {
 /* Estilo do botão */
 .meubotao {
     display: inline-block;
-    background-color: #616df9; /* Cor de fundo */
+    background-color: #050612; /* Cor de fundo */
     color: white; /* Cor do texto */
     padding: 15px 32px; /* Tamanho do botão */
     text-align: center; /* Centraliza o texto */
@@ -124,4 +125,18 @@ img {
 
 .meubotao:hover {
     background-color: #ff0000; /* Muda a cor quando o mouse passa sobre o botão */
+}
+
+.content3 {
+    padding: 50px;
+    text-align: center;
+    background-color: #616df9;
+  }
+
+  .content3 h2 {
+    margin-bottom: 20px; /* Aumenta o espaço abaixo do título */
+}
+
+.content3 p {
+    margin-bottom: 20px; /* Aumenta o espaço abaixo do parágrafo */
 }
